--- a/config/i3status/config
+++ b/config/i3status/config
@@ -1,12 +1,3 @@
-#general {
-#	output_format = "i3bar"
-#	colors = false
-#	markup = pango
-#	interval = 5
-#}
-#
-##order += "wireless enp0s31f6"
-#order += "volume master"
 general {
 	colors = false
 	markup = pango
@@ -22,6 +13,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "load"
 order += "memory"
+order += "battery all"
 
 volume master {
 	format = "<span background='#defcf9'>  %volume </span>"
@@ -48,6 +40,17 @@ load {
 memory {
         format = "<span background='#5dacbd'> Mem:%used </span>"
         format_degraded = "<span background='#5dacbd'> MEMORY < %available </span>"
+}
+
+battery all {
+        format = "<span background='#87c095'>  %status %percentage </span>"
+        format_down = "No battery"
+        status_chr = "⚡"
+        status_bat = ""
+        status_unk = "?"
+        status_full = "☻"
+        path = "/sys/class/power_supply/BAT%d/uevent"
+        low_threshold = 10
 }
 
 tztime local {
