--- a/config/i3status/config
+++ b/config/i3status/config
@@ -13,7 +13,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "load"
 order += "memory"
-order += "battery all"
+# order += "battery all"
 
 volume master {
 	format = "<span background='#defcf9'>  %volume </span>"
