--- a/config/i3-mylaptop/config
+++ b/config/i3-mylaptop/config
@@ -1,5 +1,9 @@
 set $mod Mod4
 font pango:FiraCode Nerd Font Bold 12
+
+# Monitor setup - autodetect and configure on startup
+exec_always --no-startup-id ~/.config/i3/monitor-setup.sh
+
 exec --no-startup-id dex --autostart --environment i3
 exec_always --no-startup-id feh --bg-scale ~/.config/i3/momo_ayase_gruvbox.png
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
@@ -27,6 +31,12 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
+# Focus follows mouse (disable if you prefer click-to-focus)
+focus_follows_mouse yes
+
+# When switching to a workspace, move mouse to that monitor
+mouse_warping output
+
 # Rofi
 bindsym $mod+a exec bash ~/.config/rofi/launchers/launcher.sh 
 bindsym $mod+Shift+e exec bash ~/.config/rofi/powermenu/powermenu.sh
@@ -45,42 +55,84 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+d layout tabbed
 bindsym $mod+s layout toggle split
-bindsym Mod1+Tab focus next
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-# Screen Capture - Note:
+# Move floating windows between monitors
+bindsym $mod+Ctrl+Left move workspace to output left
+bindsym $mod+Ctrl+Right move workspace to output right
+bindsym $mod+Ctrl+Up move workspace to output up
+bindsym $mod+Ctrl+Down move workspace to output down
+
+# Screen Capture
 bindsym $mod+P exec --no-startup-id maim "/home/$USER/Pictures/$(date)"
 bindsym Ctrl+$mod+P exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
+# Monitor management hotkeys
+bindsym $mod+m exec --no-startup-id ~/.config/i3/monitor-setup.sh
+bindsym $mod+Shift+m exec --no-startup-id arandr
+
+# Workspace variables
+set $fm eDP-1
+set $sm HDMI-1-1
+
+# Define output for workspaces
+workspace 1 output $fm
+workspace 2 output $fm
+workspace 3 output $fm
+workspace 4 output $fm
+workspace 5 output $fm
+workspace 6 output $sm
+workspace 7 output $sm
+workspace 8 output $sm
+workspace 9 output $sm
+workspace 10 output $sm
+
 # Define names for default workspaces
-set $ws1 " 1 "
-set $ws2 " 2 "
-set $ws3 " 3 "
-set $ws4 " 4 "
-set $ws5 " 5 "
-set $ws6 " 6 "
-set $ws7 " 7 "
-set $ws8 " 8 "
-set $ws9 " 9 "
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
 set $ws10 "10"
+
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+10 workspace $ws10
+
+# Alternative: Access all 10 workspaces with $mod (comment above if using this)
+# bindsym $mod+1 workspace $ws1
+# bindsym $mod+2 workspace $ws2
+# bindsym $mod+3 workspace $ws3
+# bindsym $mod+4 workspace $ws4
+# bindsym $mod+5 workspace $ws5
+# bindsym $mod+6 workspace $ws6
+# bindsym $mod+7 workspace $ws7
+# bindsym $mod+8 workspace $ws8
+# bindsym $mod+9 workspace $ws9
+# bindsym $mod+0 workspace $ws10
 
 # Move to cycle workspace
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
 bindsym $mod+Shift+Right workspace next
 bindsym $mod+Shift+Left workspace prev
+
+# Move to next/prev workspace on current monitor
+bindsym $mod+Ctrl+Tab workspace next_on_output
+bindsym $mod+Ctrl+Shift+Tab workspace prev_on_output
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -93,6 +145,10 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+
+# Move focused container to other monitor
+bindsym $mod+Shift+greater move container to output right
+bindsym $mod+Shift+less move container to output left
 
 # reload the configuration file
 # bindsym $mod+Shift+c reload
@@ -118,14 +174,14 @@ mode "resize" {
 
 bindsym $mod+Shift+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display a workspace bar
 bar {
 	status_command i3status
 	position bottom
 	workspace_min_width 24
 	padding 2px 8px 2px 8px
 	strip_workspace_numbers yes
+	tray_output primary
 
 	colors {
 	background #141c21
@@ -155,5 +211,3 @@ for_window [class=".*"] border pixel 2
 hide_edge_borders smart
 gaps inner 10
 smart_gaps on
-
-
