--- a/config/i3-mylaptop/config
+++ b/config/i3-mylaptop/config
@@ -12,7 +12,12 @@ exec --no-startup-id xset s off && xset -dpms && xset s noblank
 exec --no-startup-id dunst
 exec --no-startup-id xclip
 exec --no-startup-id fcitx5
-# exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
+
+# Touchpad configuration
+exec_always --no-startup-id xinput set-prop "ELAN0504:01 04F3:3091 Touchpad" "libinput Tapping Enabled" 1
+exec_always --no-startup-id xinput set-prop "ELAN0504:01 04F3:3091 Touchpad" "libinput Natural Scrolling Enabled" 1
+exec_always --no-startup-id xinput set-prop "ELAN0504:01 04F3:3091 Touchpad" "libinput Disable While Typing Enabled" 1
+exec_always --no-startup-id xinput set-prop "ELAN0504:01 04F3:3091 Touchpad" "libinput Accel Speed" 0.35
 
 # Use pactl to adjust volume and brightness.
 set $refresh_i3status killall -SIGUSR1 i3status
