zathura + ollama + telescope

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -31,7 +31,7 @@ modules-left = round-left workspaces empty-space2 round-right
 modules-center = round-left tray round-right
 ;modules-right = round-left cpu memory round-right empty-space round-left pulseaudio battery round-right
 ;modules-right = round-left time round-right empty-space round-left pulseaudio spacee battery round-right
-modules-right = round-left pulseaudio spacee round-right3 empty-space2 round-left2 time round-right2
+modules-right = round-left pulseaudio empty-space2 round-left2 time round-right2
 
 font-0 = FiraCode Nerd Font:style=Bold:pixelsize=13;3
 font-1 = FiraCode Nerd Font:size= 23;5
@@ -40,8 +40,7 @@ font-2 = Material Design Icons:style=Bold:size=11;3
 [module/tray]
 type = internal/tray
 tray-background = ${colors.background}
-tray-size = 60%
-tray-padding = 2
+tray-size = 100%
 tray-spacing = 4
 
 [module/power]
@@ -106,7 +105,7 @@ format-background = ${colors.teal}
 format-foreground = #1a1b32
 
 ;date = 󰥔 %H:%M%{F-}
-date = "%A, %d %B at %H:%M "
+date = "%A, %d %B at %H:%M"
 time-alt = %H:%M
 label = %date%%time%
 
@@ -250,16 +249,16 @@ enable-scroll = false
 format = <label-state>
 label-monitor = %name%
 
-label-active = 
+label-active = 
 label-active-foreground = ${colors.foreground}
 label-active-background = ${colors.background}
-label-occupied = 
+label-occupied = 
 label-occupied-foreground = ${colors.foreground}
 label-occupied-background = ${colors.background}
 label-urgent = 
 label-urgent-foreground = ${colors.foreground}
 label-urgent-background = ${colors.background}
-label-empty = 
+label-empty = 
 label-empty-foreground = ${colors.foreground}
 label-empty-background = ${colors.background}
 
