polybar + nvim status

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -27,11 +27,8 @@ line-size = 0
 ;wm-restack = bspwm
 
 modules-left = round-left workspaces empty-space2 round-right
-; modules-left = round-left workspaces empty-space2 round-left2 wlan round-right2
-modules-center = round-left tray round-right
-;modules-right = round-left cpu memory round-right empty-space round-left pulseaudio battery round-right
-;modules-right = round-left time round-right empty-space round-left pulseaudio spacee battery round-right
-modules-right = round-left pulseaudio empty-space2 round-left2 time round-right2
+modules-center = round-left title round-right
+modules-right = round-left tray empty-space2 pulseaudio empty-space2 round-left2 time round-right2
 
 font-0 = FiraCode Nerd Font:style=Bold:pixelsize=13;3
 font-1 = FiraCode Nerd Font:size= 23;5
@@ -225,13 +222,13 @@ format-volume-background = ${colors.background}
 format-volume-padding = 1
 format-volume-foreground = ${colors.foreground} 
 format-muted = <label-muted>
-format-muted-prefix = "󰖁 "
+format-muted-prefix = " 󰖁 "
 format-muted-background = ${colors.background}
 format-muted-padding = 0
 format-muted-prefix-foreground = ${colors.foreground}
 
 
-label-muted = "Muted"
+label-muted = "Muted "
 label-muted-foreground = ${colors.foreground} 
 ramp-volume-0 = 󰕿
 ramp-volume-1 = 󰖀
@@ -249,7 +246,7 @@ enable-scroll = false
 format = <label-state>
 label-monitor = %name%
 
-label-active = 
+label-active = %index%
 label-active-foreground = ${colors.foreground}
 label-active-background = ${colors.background}
 label-occupied = 
