--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -31,6 +31,7 @@ map ctrl+shift+up      increase_font_size
 map ctrl+shift+down    decrease_font_size
 map ctrl+shift+backspace restore_font_size
 allow_remote_control yes
+listen_on unix:@mykitty
 
 tab_bar_min_tabs            2
 tab_bar_edge                bottom
