--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -26,7 +26,7 @@ border-bottom-color = #1a1a23
 line-size = 0
 ;wm-restack = bspwm
 
-modules-left = round-left workspaces empty-space2 round-right
+modules-left = round-left i3 empty-space2 round-right
 modules-center = round-left title round-right
 modules-right = round-left tray empty-space2 pulseaudio empty-space2 round-left2 time round-right2
 
@@ -236,31 +236,18 @@ ramp-volume-2 = 󰕾
 
 click-right = pavucontrol &
 
-[module/workspaces]
-type = internal/xworkspaces
+[module/i3]
+type = internal/i3
+format = <label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
 
-pin-workspaces = false
-enable-click = true
-enable-scroll = false
+label-focused = %index%
+label-focused-background = ${colors.background}
+label-focused-foreground = #ffffff
+label-focused-padding = 2
 
-format = <label-state>
-label-monitor = %name%
-
-label-active = %index%
-label-active-foreground = ${colors.foreground}
-label-active-background = ${colors.background}
-label-occupied = 
-label-occupied-foreground = ${colors.foreground}
-label-occupied-background = ${colors.background}
-label-urgent = 
-label-urgent-foreground = ${colors.foreground}
-label-urgent-background = ${colors.background}
-label-empty = 
-label-empty-foreground = ${colors.foreground}
-label-empty-background = ${colors.background}
-
-label-active-padding = 2
-label-urgent-padding = 1
-label-occupied-padding = 2
-label-empty-padding = 2
-
+label-unfocused = %index%
+label-unfocused-background = ${colors.background}
+label-unfocused-foreground = #3D3938
+label-unfocused-padding = 2
