--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,6 +5,7 @@ bold_italic_font auto
 font_size        15.0
 enable_audio_bell no
 cursor           #8fee96
+cursor_blink_interval 0
 shell_integration no-cursor
 cursor_shape beam
 cursor_stop_blinking_after 3.0
