nvim: native lsp

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,3 +1,26 @@
 unredir-if-possible = false;
 backend = "xrender"; # try "glx" if xrender doesn't help
 vsync = true;
+
+
+# Borders
+draw-borders = true;
+border-width = 1;
+border-color = "#009999";
+active-border-color = "#009999";
+inactive-border-color = "#555555";
+
+# Rounded corners
+corner-radius = 10;
+rounded-corners-exclude = [ "window_type = 'dock'", "window_type = 'utility'" ];
+round-borders = 1;
+
+# No transparency if you don't want it
+inactive-opacity = 1.0;
+active-opacity = 1.0;
+frame-opacity = 1.0;
+
+# No shadows or blur
+shadow = false;
+blur-background = false;
+
