--- a/config/i3-homepc/config
+++ b/config/i3-homepc/config
@@ -9,7 +9,7 @@ exec --no-startup-id dunst
 exec --no-startup-id xclip
 exec --no-startup-id fcitx5
 exec_always --no-startup-id bash ~/.config/polybar/launch.sh
-exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
+exec_always --no-startup-id picom -b --config ~/.config/picom/picom.conf
 
 # Use pactl to adjust volume and brightness.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +2% && $refresh_i3status
