--- a/config/i3-mylaptop/config
+++ b/config/i3-mylaptop/config
@@ -12,6 +12,7 @@ exec --no-startup-id xset s off && xset -dpms && xset s noblank
 exec --no-startup-id dunst
 exec --no-startup-id xclip
 exec --no-startup-id fcitx5
+exec_always --no-startup-id picom -b --config ~/.config/picom/picom.conf
 
 # Touchpad configuration
 exec_always --no-startup-id xinput set-prop "ELAN0504:01 04F3:3091 Touchpad" "libinput Tapping Enabled" 1
