nvim lsp + niri

--- a/config/waybar-homepc/config.jsonc
+++ b/config/waybar-homepc/config.jsonc
@@ -29,11 +29,11 @@
         "wlr/taskbar",
         "pulseaudio",
         //"backlight",
-        "battery",
+        //"battery",
         //"custom/weather",
         // "group/apps",
         //"network",
-        // "group/stats",
+        "group/stats",
         "clock"
     ],
     // "niri/workspaces": {
