--- a/config/waybar-mylaptop/config.jsonc
+++ b/config/waybar-mylaptop/config.jsonc
@@ -28,7 +28,7 @@
         //"idle_inhibitor",
         "wlr/taskbar",
         "pulseaudio",
-        //"backlight",
+        "backlight",
         "battery",
         //"custom/weather",
         // "group/apps",
